Added background loader and test bed
background loader with new test bed update

--- a/TestBed/Multitasking.html
+++ b/TestBed/Multitasking.html
@@ -29,7 +29,7 @@
 				let randOriginY2=Math.floor((Math.random() * 150) + 1);
 				let randOriginX3=Math.floor((Math.random() * 300) + 1);
 				let randOriginY3=Math.floor((Math.random() * 150) + 1);
-				let Text1 = "1";
+				let Text1 = "hello";
 				let Text2 = "2";
 				let Text3 = "3";
 				this.SCMap.SetGlobalStyle = 'red';
